# push_swap

./: .gitignore  CMakeLists.txt  a.out  analyser.sh  checker  checkerG  commande  log  main.c  makefile  push_swap  tes
include/: erase_elem.c  erase_list.c  ft_add_elem.c  ft_create_list.c  ft_show_list.c  pushswap.h
include/libft/: ft_aschar.c  ft_atoi.c  ft_haschar.c  ft_is_sorted.c  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstadd.c  ft_lstnew.c  ft_max.c  ft_memset.c  ft_min.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putnbrbase_fd.c  ft_putnstr.c  ft_putnwstr.c  ft_putwchar_fd.c  ft_sort_integer_table.c  ft_split_whitespace.c  ft_sqrt.c  ft_strchr.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strndup.c  ft_strnew.c  ft_strrchr.c  ft_strrev.c  ft_strsplit.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  (+4 more)
include/libft/ft_printf/: Makefile
include/libft/ft_printf/include/: ft_printf.h
include/libft/ft_printf/src/: ft_bzero.c  ft_check.c  ft_display.c  ft_handle1.c  ft_handle2.c  ft_handle3.c  ft_handle4.c  ft_handle_all.c  ft_isdigit.c  ft_isutils.c  ft_max.c  ft_memalloc.c  ft_memset.c  ft_nstrlen.c  ft_putchar.c  ft_putchar_fd.c  ft_putnbrbase.c  ft_putnbrbase_fd.c  ft_putnstr.c  ft_putnstr_fd.c  ft_putnwstr.c  ft_putstr.c  ft_putwchar.c  ft_putwchar_fd.c  ft_strchr.c  ft_strlen.c  ft_tolower.c
libft/: ft_atoi_base.c  ft_bzero.c  ft_lstiter.c  ft_lstmap.c  ft_memchr.c  ft_memcmp.c  ft_memdel.c  ft_memmove.c  ft_power.c  ft_putstr.c  ft_strclr.c  ft_strmapi.c  ft_strncmp.c  ft_strrchr.c  libft.h
push_swap/include/: pushswap.h
push_swap/include/libft/: ft_atoi.c  ft_create_elem.c  ft_is_prime.c  ft_isalpha.c  ft_isprint.c  ft_lstdel.c  ft_lstdelone.c  ft_memalloc.c  ft_memccpy.c  ft_memcpy.c  ft_nstrlen.c  ft_putendl.c  ft_putnbr.c  ft_putnbrbase.c  ft_putnstr_fd.c  ft_putstr_fd.c  ft_putwchar.c  ft_strcmp.c  ft_strlen.c  ft_strlen_skip_white.c  ft_strmap.c  ft_strncat.c  ft_strncpy.c  ft_strnequ.c  ft_strnstr.c  ft_strstr.c  ft_strsub.c  libft.h
push_swap/src/: algos.c  methods2.c  ops2.c  ops4.c  pushswap.c
src/: algos.c  algos1.c  checker.c  ft_count_list.c  listops1.c  listops2.c  methods.c  methods2.c  methods3.c  methods_checker.c  methods_pushswap.c  methods_pushswap2.c  methods_pushswap3.c  op_push.c  op_reverserotate.c  op_rotate.c  op_swap.c  ops1.c  ops2.c  ops3.c  ops4.c  ops5.c  print_list.c  push_swap.c  pushswap.c
test_ps/: push_swap.sh
