cmake_minimum_required(VERSION 3.9)
project(push_swap_reborn)

set(CMAKE_CXX_STANDARD 11)

add_executable(push_swap_reborn
        include/libft/ft_atoi.c
        include/libft/ft_atoi_base.c
        include/libft/ft_bzero.c
        include/libft/ft_create_elem.c
        include/libft/ft_haschar.c
        include/libft/ft_is_prime.c
        include/libft/ft_is_sorted.c
        include/libft/ft_isalnum.c
        include/libft/ft_isalpha.c
        include/libft/ft_isascii.c
        include/libft/ft_isdigit.c
        include/libft/ft_isprint.c
        include/libft/ft_itoa.c
        include/libft/ft_lstadd.c
        include/libft/ft_lstdel.c
        include/libft/ft_lstdelone.c
        include/libft/ft_lstiter.c
        include/libft/ft_lstmap.c
        include/libft/ft_lstnew.c
        include/libft/ft_max.c
        include/libft/ft_memalloc.c
        include/libft/ft_memccpy.c
        include/libft/ft_memchr.c
        include/libft/ft_memcmp.c
        include/libft/ft_memcpy.c
        include/libft/ft_memdel.c
        include/libft/ft_memmove.c
        include/libft/ft_memset.c
        include/libft/ft_min.c
        include/libft/ft_nstrlen.c
        include/libft/ft_power.c
        include/libft/ft_putchar.c
        include/libft/ft_putchar_fd.c
        include/libft/ft_putendl.c
        include/libft/ft_putendl_fd.c
        include/libft/ft_putnbr.c
        include/libft/ft_putnbr_fd.c
        include/libft/ft_putnbrbase.c
        include/libft/ft_putnbrbase_fd.c
        include/libft/ft_putnstr.c
        include/libft/ft_putnstr_fd.c
        include/libft/ft_putnwstr.c
        include/libft/ft_putstr.c
        include/libft/ft_putstr_fd.c
        include/libft/ft_putwchar.c
        include/libft/ft_putwchar_fd.c
        include/libft/ft_sort_integer_table.c
        include/libft/ft_split_whitespace.c
        include/libft/ft_sqrt.c
        include/libft/ft_strcat.c
        include/libft/ft_strchr.c
        include/libft/ft_strclr.c
        include/libft/ft_strcmp.c
        include/libft/ft_strcpy.c
        include/libft/ft_strdel.c
        include/libft/ft_strdup.c
        include/libft/ft_strequ.c
        include/libft/ft_striter.c
        include/libft/ft_striteri.c
        include/libft/ft_strjoin.c
        include/libft/ft_strlcat.c
        include/libft/ft_strlen.c
        include/libft/ft_strlen_skip_white.c
        include/libft/ft_strmap.c
        include/libft/ft_strmapi.c
        include/libft/ft_strncat.c
        include/libft/ft_strncmp.c
        include/libft/ft_strncpy.c
        include/libft/ft_strndup.c
        include/libft/ft_strnequ.c
        include/libft/ft_strnew.c
        include/libft/ft_strnstr.c
        include/libft/ft_strrchr.c
        include/libft/ft_strrev.c
        include/libft/ft_strsplit.c
        include/libft/ft_strstr.c
        include/libft/ft_strsub.c
        include/libft/ft_strtrim.c
        include/libft/ft_tolower.c
        include/libft/ft_toupper.c
        include/libft/ft_utoa.c
        include/libft/get_next_line.c
        include/libft/libft.h
        include/pushswap.h
        src/ft_count_list.c
        src/checker.c
        src/methods.c
        src/methods_pushswap.c
        src/methods_pushswap2.c
        src/methods_checker.c
        src/methods2.c
        src/op_push.c
        src/op_reverserotate.c
        src/op_rotate.c
        src/op_swap.c
        src/push_swap.c)
